Configure 11ty to copy scripts

--- a/pages/index.njk
+++ b/pages/index.njk
@@ -5,4 +5,9 @@ pageTitle: RingsDB Insights
 
 {% block main %}
   Here we go. Does it work?
+  <form onSubmit=>
+    <label for="deckIdInput">Enter your published deck URL</label>
+    <input type="text" id="deckIdInput"/>
+    <button type="submit">Go</button>
+  </form>
 {% endblock %}
